--- a/workspace.properties
+++ b/workspace.properties
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><Workspace>
 <Projects>
+<Project ID="f1932c6e-320e-44a0-8fdf-51db2ab66c6a" Name="App" Plugin="org.polariscode.plugin.MobileApp"/>
 <Project ID="cdaefe73-18af-4dab-8afa-af4b93bd7e20" Name="SpringBoot" Plugin="org.polariscode.plugin.web.springboot"/>
 </Projects>
 </Workspace>
